# Eakazi-Backend

./: .gitignore  Cargo.toml  LICENSE  README copy.md  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: test_backend_local.sh
src/ea_backend/: Cargo.toml  ea_backend.did
src/ea_backend/src/: certificate.rs  lib.rs
src/ea_frontend/src/: .ic-assets.json5  index.html  index.js
