[package]
name = "ea_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
candid_derive = "=0.6.4"
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng", "wasm-bindgen", "js"] }
getrandom = { version = "0.2", features = ["custom"] }
candid-extractor = "0.1.2"
sha2 = "0.10.8"
serde = { version = "1.0.160", features = ["derive"] }
serde_cbor = "0.11"
cap-sdk = "0.2.4"
compile-time-run = "0.2.12"

[target.wasm32-unknown-unknown.features]
wasm-bindgen = ["rand/wasm-bindgen"]
stdweb = ["rand/stdweb"]

[dependencies.rand]
optional = true

[dependencies.wasm-bindgen]
optional = true

[when.'cfg(all(feature = "wasm-bindgen", feature = "rand"))']
features = ["rand/wasm-bindgen"]
